// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component should render admin routes 1`] = `
<header
  className="navigation"
>
  <img
    alt=""
    className="logo"
    src="logo.jpg"
  />
  <div
    className="linkContainer"
  >
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/profile?userId=1234"
        onClick={[Function]}
      >
        [tigyra]
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/home"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/catalog"
        onClick={[Function]}
      >
        Catalog
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/create"
        onClick={[Function]}
      >
        Create
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/contacts"
        onClick={[Function]}
      >
        Contacts
      </a>
    </div>
    <div
      className="header-button-div"
    >
      <button
        className="header-button"
        onClick={[Function]}
      >
        Logout
      </button>
    </div>
  </div>
</header>
`;

exports[`Header Component should render authenticated routes 1`] = `
<header
  className="navigation"
>
  <img
    alt=""
    className="logo"
    src="logo.jpg"
  />
  <div
    className="linkContainer"
  >
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/profile?userId=1234"
        onClick={[Function]}
      >
        [tigyra]
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/home"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/catalog"
        onClick={[Function]}
      >
        Catalog
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/contacts"
        onClick={[Function]}
      >
        Contacts
      </a>
    </div>
    <div
      className="header-button-div"
    >
      <button
        className="header-button"
        onClick={[Function]}
      >
        Logout
      </button>
    </div>
  </div>
</header>
`;

exports[`Header Component should render not authenticated routes 1`] = `
<header
  className="navigation"
>
  <img
    alt=""
    className="logo"
    src="logo.jpg"
  />
  <div
    className="linkContainer"
  >
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/contacts"
        onClick={[Function]}
      >
        Contacts
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </div>
    <div
      className="header-list-item"
    >
      <a
        className="header-link"
        href="/register"
        onClick={[Function]}
      >
        Register
      </a>
    </div>
  </div>
</header>
`;
